# glibc_preload

./: CMakeLists.txt  README.md
src/: glibc_preload.c
